# google_photo_emailer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  email_test.py  requirements.txt  simple_script.py  test_token.json
photo_emailer/: app.py  authentication.py  email_client.py
photo_emailer/infrastructure/: browser_authentication.py  credentials_io.py  credentials_loader.py  credentials_refresher.py  email_sender.py  file_operations.py  file_saver.py  globber.py  image_loader.py  image_processor.py  login_client.py
photo_emailer/logic/: chunker.py  credentials.py  file_organizer.py  image_dimension_calculator.py
photo_emailer/utils/: datestuff.py  events.py
src/: main.rs
src/infrastructure/: google_photo_client.rs  google_photo_login.rs  mod.rs
tests/: test_app.py  test_browser_authentication.py  test_chunker.py  test_credentials.py  test_credentials_loader.py  test_credentials_refresher.py  test_email_sender.py  test_file_operations.py  test_file_organizer.py  test_globber.py  test_image_dimension_calculator.py  test_image_loader.py  test_image_processor.py  test_json_loader.py  test_login_client.py
